[package]
name = "traces"
version = "0.0.1"
edition = "2024"

[features]
otlp = ["dep:opentelemetry-otlp", "dep:tonic", "dep:tokio"]
stdout = ["dep:opentelemetry-stdout"]

[dependencies]
configs = { git = "ssh://git@github.com/ruskit/configs.git", rev = "beta-v0.0.4" }

opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"]}
tracing = { version = "0.1.41" }
thiserror = { version = "2.0.12" }
serde = { version = "1.0.219", features = ["derive"] }

# OTLP Feature
tonic = { version = "0.13.1", features = ["tls-native-roots"], optional = true }
tokio = { version = "1.45.0", features = ["default"], optional = true }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "tls", "tls-roots"], optional = true }

# Stdout Feature
opentelemetry-stdout = { version = "0.30.0", features = ["trace"], optional = true }
